--- a/package.json
+++ b/package.json
@@ -1,45 +1,19 @@
 {
-  "name": "FIFA 2018",
+  "name": "fifa-standings-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://debikadutt.github.io/fifa-standings-app1",
   "dependencies": {
-    "axios": "^0.18.0",
-    "flag-icon-css": "^3.0.0",
-    "hoek": "^5.0.3",
-    "immutability-helper": "^2.7.0",
-    "node-sass-chokidar": "^1.3.0",
-    "npm-run-all": "^4.1.3",
-    "prop-types": "^15.6.1",
-    "react": "^16.4.0",
-    "react-confetti": "^2.3.0",
-    "react-dom": "^16.4.0",
-    "react-flag-icon-css": "^1.0.23",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
-    "react-sizeme": "^2.4.4",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "whatwg-fetch": "^2.0.4"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
-    "gh-pages": "^1.2.0",
-    "svg-url-loader": "^2.3.2"
   }
 }
