--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "fifa-standings-app",
+  "name": "FIFA-World-Cup-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://debikadutt.github.io/fifa-standings-app1",
+  "homepage": "http://debikadutt.github.io/FIFA-World-Cup-app",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "npm-run-all": "^4.1.3",
+    "prop-types": "^15.6.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,5 +21,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
